...
        
        let text = presenter.makeResultsMessage()
        
        let alertPresenter = AlertPresenter(viewController: self)
        
        let alertModel = AlertModel(
            title: "Этот раунд окончен!",
            message: text,
            buttonText: "Сыграть еще раз"
        )
        
        alertPresenter.showAlert(model: alertModel)
        
...
